RESOLVED FIXED139888
Saturated arithmetics: Incorrect float/double clamping.
https://bugs.webkit.org/show_bug.cgi?id=139888
Summary Saturated arithmetics: Incorrect float/double clamping.
alan
Reported 2014-12-22 17:25:28 PST
#if ENABLE(SATURATED_LAYOUT_ARITHMETIC) - m_value = clampTo<float>(value * kFixedPointDenominator, static_cast<float>(INT_MIN), static_cast<float>(INT_MAX)); + m_value = clampToInteger(value * kFixedPointDenominator); #else
Attachments
Patch (3.68 KB, patch)
2014-12-22 17:29 PST, alan
no flags
Patch (3.50 KB, patch)
2014-12-31 22:56 PST, alan
no flags
alan
Comment 1 2014-12-22 17:28:02 PST
alan
Comment 2 2014-12-22 17:29:55 PST
alan
Comment 3 2014-12-31 22:56:07 PST
WebKit Commit Bot
Comment 4 2015-01-01 00:32:29 PST
Comment on attachment 243858 [details] Patch Clearing flags on attachment: 243858 Committed r177845: <http://trac.webkit.org/changeset/177845>
WebKit Commit Bot
Comment 5 2015-01-01 00:32:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.