Saturated arithmetics: Incorrect float/double clamping. https://bugs.webkit.org/show_bug.cgi?id=139888 rdar://problem/19330885

Reviewed by Simon Fraser.

Clamp float and double values correctly when applying saturated arithmetics.

Source/WebCore:

Test: LayoutUnit test for float overflow.

* platform/LayoutUnit.h:
(WebCore::LayoutUnit::LayoutUnit):

Tools:

* TestWebKitAPI/Tests/WebCore/LayoutUnit.cpp:
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/158003@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177845 268f45cc-cd09-0410-ab3c-d52691b4dbfc